Utilized global variables, a modern css reset, and consistent flexboxes to construct an appropriate layout for the content throughout the webpage. For interactive elements such as anchor links I removed their default styling and for the button 'read more' I wrapped it in a form so that users only using a keyboard wouldn't have issues dealing with a nested link. Furthemore, I utilized clamp() functions throughout the content for widths, height, and font-sizes to allow the content to appropriately scale at different resolutions. This reduces the need for extra breakpoints and makes the webpage more accessible for users on different devices.

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,13 @@
+:root {
+    --primary-accent-color: hsl(5, 85%, 63%);
+    --heading-article-two-color: hsl(35, 77%, 62%);
+    --article-bg-color: hsl(240, 100%, 5%);
+    --main-paragraph-color: hsl(236, 13%, 42%);
+    --article-paragraph-color: hsl(233, 8%, 79%);
+    --horizontal-rule-color: hsl(236, 13%, 42%);
+    --footer-anchor-color: hsl(231, 100%, 73%);
+}
+
 *, *::before, *::after {
     box-sizing: border-box;
 }
@@ -15,10 +25,29 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 1rem;
+    position: relative;
 
     button {
         border: none;
         background-color: white;
+    }
+
+    h1 {
+        font-size: clamp(1rem, 8vw, 3rem);
+    }
+    h2 {
+        font-size: clamp(.8rem, 6vw, 2.5rem);
+    }
+    h3 {
+        font-size: clamp(.6rem, 4vw, 2rem);
+    }
+    p {
+        color: var(--main-paragraph-color);
+        font-size: clamp(.5rem, 3vw, 1.5rem);
+    }
+
+    h2, h3, p {
+        line-height: 1.6;
     }
 }
 
@@ -55,6 +84,11 @@ header {
             flex-direction: column;
             gap: 1rem;
             font-size: clamp(1rem, 5vw, 2rem);
+
+            a {
+                color: black;
+                text-decoration: none;
+            }
         }
     }
 
@@ -62,5 +96,95 @@ header {
         display: flex;
         flex-direction: column;
         gap: 5rem;
+    }
+}
+
+main {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+
+    section {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 1rem;
+
+        button {
+            font-weight: bold;
+            letter-spacing: .1rem;
+            text-transform: uppercase;
+            font-size: clamp(.5rem, 3vw, 1.5rem);
+            background-color: var(--primary-accent-color);
+            padding: .8rem 1.2rem .8rem 1.2rem;
+        }
+    }
+
+    h1 {
+        font-weight: 800;
+        width: clamp(1rem, 70%, 50rem);
+    }
+
+    .section-one {
+        color: white;
+        background-color: var(--article-bg-color);
+        display: flex;
+        flex-direction: column;
+        gap: 1.5rem;
+        padding: 1rem;
+
+        h2 {
+            color: var(--heading-article-two-color);
+        }
+
+        p {
+            color: var(--article-paragraph-color);
+        }
+
+        hr {
+            border: 1px solid var(--horizontal-rule-color);
+            width: 100%;
+        }
+    }
+
+    .section-two {
+        margin-bottom: 10rem;
+
+        div {
+            height: fit-content;
+        }
+
+        h2 {
+            color: var(--primary-accent-color);
+        }
+
+        img {
+            height: clamp(50px, 20vw, 200px);
+        }
+
+        .article-two {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+        }
+    }
+}
+
+footer {
+    text-align: center;
+    background-color: black;
+    position: absolute;
+    width: 100%;
+    padding: 1rem;
+    bottom: 0;
+
+    p {
+        color: white;
+    }
+
+    a {
+        color: var(--footer-anchor-color);
+        font-weight: bold;
+        text-decoration: none;
     }
 }
